tests/src/frontend/syntax/invalid/unused_local_3.sk
fun foo(): void {
  _ = x -> void;
  void
}
